--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/vinayaksh42/clightning-node-server#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.3"
   }
 }
